main/default/objects/Project_Task__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <summarizedField>Project_Task_Log__c.Hours__c</summarizedField>
    <summaryForeignKey>Project_Task_Log__c.Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>