main/default/objects/Project_Task__c/fields/AE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_End_Date__c</fullName>
    <inlineHelpText>App Exchange End Date</inlineHelpText>
    <label>AE End Date</label>
    <type>Date</type>
</CustomField>