main/default/objects/Project_Task__c/fields/AE_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Notes__c</fullName>
    <inlineHelpText>App Exchange Notes</inlineHelpText>
    <label>AE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>