main/default/objects/Project_Task__c/fields/AE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Start_Date__c</fullName>
    <inlineHelpText>App Exchange Start Date</inlineHelpText>
    <label>AE Start Date</label>
    <type>Date</type>
</CustomField>