main/default/objects/Project_Task__c/fields/Alternative_Title__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Title__c</fullName>
    <label>Alternative Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>