main/default/objects/Project_Task__c/fields/Assigned_Developer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned (Developer)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Tasks (Assigned (Developer))</relationshipLabel>
    <relationshipName>Project_Tasks_Developer</relationshipName>
    <type>Lookup</type>
</CustomField>