main/default/objects/Project_Task__c/fields/Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_to_User</relationshipName>
    <type>Lookup</type>
</CustomField>