main/default/objects/Project_Task__c/fields/Bug_Count__c.field-meta.xml
<CustomField>
    <fullName>Bug_Count__c</fullName>
    <label>Bug Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>