main/default/objects/Project_Task__c/fields/Build_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Build_Due_Date__c</fullName>
    <label>Build Due Date</label>
    <type>Date</type>
</CustomField>