main/default/objects/Project_Task__c/fields/Build_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Build_Requirements__c</fullName>
    <label>Build Requirements</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>