main/default/objects/Project_Task__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To relate to campaign record in order to pull the owner of the campaign to be use as the approver in the approval process</description>
    <inlineHelpText>Campaign will be automatically populated upon saving if related to a Workplan.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>