main/default/objects/Project_Task__c/fields/Campaign_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Help_Text__c</fullName>
    <defaultValue>&apos;Campaign will be automatically populated upon saving if related to a Workplan.&apos;</defaultValue>
    <label>Campaign Help Text</label>
    <type>TextArea</type>
</CustomField>