main/default/objects/Project_Task__c/fields/Capture_Type__c.field-meta.xml
<CustomField>
    <fullName>Capture_Type__c</fullName>
    <formula>Requirements_Addressed__r.Capture_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capture Type</label>
    <type>Text</type>
</CustomField>