main/default/objects/Project_Task__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <inlineHelpText>How confident are we about the impact and reach scores? How much data do we have to back up our estimates?</inlineHelpText>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% - High Confidence</fullName>
            </value>
            <value>
                <fullName>80% - Medium Confidence</fullName>
            </value>
            <value>
                <fullName>50% - Low Confidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>