main/default/objects/Project_Task__c/fields/Convert_To_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert To Functionality</label>
    <type>Checkbox</type>
</CustomField>