main/default/objects/Project_Task__c/fields/Dev_Task__c.field-meta.xml
<CustomField>
    <fullName>Dev_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>QA Task</relationshipLabel>
    <relationshipName>Dev_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>