main/default/objects/Project_Task__c/fields/Document_Version_Log__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_Log__c</fullName>
    <label>Document Version Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>