main/default/objects/Project_Task__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <inlineHelpText>How much of a time investment will this initiative require from a product, design, and development perspective?</inlineHelpText>
    <label>Effort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 0-40 hours</fullName>
            </value>
            <value>
                <fullName>2 - 41-80 hours</fullName>
            </value>
            <value>
                <fullName>3 - 81-160 hours</fullName>
            </value>
            <value>
                <fullName>4 - 161-240 hours</fullName>
            </value>
            <value>
                <fullName>5 - More than 240 hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>