main/default/objects/Project_Task__c/fields/Epic_Feature__c.field-meta.xml
<CustomField>
    <fullName>Epic_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Epic (Feature)</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Project Tasks (Feature)</relationshipLabel>
    <relationshipName>Epic_Feature</relationshipName>
    <type>Lookup</type>
</CustomField>