main/default/objects/Project_Task__c/fields/Epic_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Epic_Help_Text__c</fullName>
    <defaultValue>&apos;Epic will be automatically populated upon saving if related to a Workplan.&apos;</defaultValue>
    <label>Epic Help Text</label>
    <type>TextArea</type>
</CustomField>