main/default/objects/Project_Task__c/fields/External_Calls_Integrations__c.field-meta.xml
<CustomField>
    <fullName>External_Calls_Integrations__c</fullName>
    <label>External Calls/Integrations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>