main/default/objects/Project_Task__c/fields/External_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Task_Number__c</fullName>
    <label>External Task Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>