main/default/objects/Project_Task__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Project_Task__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filterItems>
        <filterItems>
            <field>Project_Task__c.Feature_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Project_Task__c.Epic__c</field>
            <operation>equals</operation>
            <valueField>$Source.Epic__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks (Functionality)</relationshipLabel>
    <relationshipName>Features1</relationshipName>
    <type>Lookup</type>
</CustomField>