main/default/objects/Project_Task__c/fields/Final_Design__c.field-meta.xml
<CustomField>
    <fullName>Final_Design__c</fullName>
    <label>Final Design</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>