main/default/objects/Project_Task__c/fields/Final_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Final_Requirement__c</fullName>
    <label>Final Requirement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>