main/default/objects/Project_Task__c/fields/For_AppExchange__c.field-meta.xml
<CustomField>
    <fullName>For_AppExchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For AppExchange</label>
    <type>Checkbox</type>
</CustomField>