main/default/objects/Project_Task__c/fields/From_DevQA_Button_Functionality__c.field-meta.xml
<CustomField>
    <fullName>From_DevQA_Button_Functionality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From DevQA Button Functionality</label>
    <type>Checkbox</type>
</CustomField>