main/default/objects/Project_Task__c/fields/From_DevQA_Button_Story__c.field-meta.xml
<CustomField>
    <fullName>From_DevQA_Button_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From DevQA Button Story</label>
    <type>Checkbox</type>
</CustomField>