main/default/objects/Project_Task__c/fields/From_Functionality_Button__c.field-meta.xml
<CustomField>
    <fullName>From_Functionality_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Functionality Button</label>
    <type>Checkbox</type>
</CustomField>