main/default/objects/Project_Task__c/fields/Functionality_Code__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Code__c</fullName>
    <label>Functionality Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>