main/default/objects/Project_Task__c/fields/Future_State__c.field-meta.xml
<CustomField>
    <fullName>Future_State__c</fullName>
    <label>Future State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>