main/default/objects/Project_Task__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Bug Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 - Extensive/Widespread (100% of Users)</fullName>
            </value>
            <value>
                <fullName>3 - Significant/Large (50% of Users)</fullName>
            </value>
            <value>
                <fullName>2 - Moderate/Limited (1 Team)</fullName>
            </value>
            <value>
                <fullName>1 - Minor/Localized (1-5 Users)</fullName>
            </value>
            <value>
                <fullName>Extensive/Widespread</fullName>
                <isActive>false</isActive>
                <label>Extensive/Widespread</label>
            </value>
            <value>
                <fullName>Minor/Localized</fullName>
                <isActive>false</isActive>
                <label>Minor/Localized</label>
            </value>
            <value>
                <fullName>Moderate/Limited</fullName>
                <isActive>false</isActive>
                <label>Moderate/Limited</label>
            </value>
            <value>
                <fullName>Significant/Large</fullName>
                <isActive>false</isActive>
                <label>Significant/Large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>