main/default/objects/Project_Task__c/fields/Impact_rice__c.field-meta.xml
<CustomField>
    <fullName>Impact_rice__c</fullName>
    <inlineHelpText>How many people will this feature affect within a given time? e.g. 20, 100, 500</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 - Massive Impact</fullName>
            </value>
            <value>
                <fullName>2 - High Impact</fullName>
            </value>
            <value>
                <fullName>1 - Medium Impact</fullName>
            </value>
            <value>
                <fullName>0.5 - Low Impact</fullName>
            </value>
            <value>
                <fullName>0.25 - Minimal Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>