main/default/objects/Project_Task__c/fields/Intended_for_Solution_Build__c.field-meta.xml
<CustomField>
    <fullName>Intended_for_Solution_Build__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intended for Solution Build</label>
    <type>Checkbox</type>
</CustomField>