main/default/objects/Project_Task__c/fields/Is_Assigned_To_Manually_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_To_Manually_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assigned To Manually Updated</label>
    <type>Checkbox</type>
</CustomField>