main/default/objects/Project_Task__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <formula>OR(
ISPICKVAL(Status__c,&apos;Completed&apos;),
ISPICKVAL(Status__c,&apos;Withdrawn&apos;),
ISPICKVAL(Status__c,&apos;Duplicate&apos;),
ISPICKVAL(Status__c,&apos;Pass&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed?</label>
    <type>Checkbox</type>
</CustomField>