main/default/objects/Project_Task__c/fields/Is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Is_Inactive__c</fullName>
    <description>CAPM-85 True if Status = Backlog, Blocked, On-hold, Completed. Used for the AgileBoard.</description>
    <formula>OR(ISPICKVAL( Status__c , &quot;Backlog&quot;),
					ISPICKVAL( Status__c , &quot;Blocked&quot;),
				 ISPICKVAL( Status__c , &quot;On-hold&quot;),
				 ISPICKVAL( Status__c , &quot;Completed&quot;), 
				 ISPICKVAL( Status__c , &quot;Withdrawn&quot;),
				 ISPICKVAL( Status__c , &quot;Duplicate&quot;))</formula>
    <label>Is Inactive</label>
    <type>Checkbox</type>
</CustomField>