main/default/objects/Project_Task__c/fields/Key_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Key_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Milestone</label>
    <type>Checkbox</type>
</CustomField>