main/default/objects/Project_Task__c/fields/Link_to_deliverable__c.field-meta.xml
<CustomField>
    <fullName>Link_to_deliverable__c</fullName>
    <label>Link to deliverable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>