main/default/objects/Project_Task__c/fields/Links_Navigation__c.field-meta.xml
<CustomField>
    <fullName>Links_Navigation__c</fullName>
    <label>Links/Navigation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>