main/default/objects/Project_Task__c/fields/Name_of_the_Approver__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Approver__c</fullName>
    <label>Name of the Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>