main/default/objects/Project_Task__c/fields/Order_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Help_Text__c</fullName>
    <defaultValue>&apos;Order will be automatically populated upon saving if related to a Workplan.&apos;</defaultValue>
    <label>Order Help Text</label>
    <type>TextArea</type>
</CustomField>