main/default/objects/Project_Task__c/fields/Parent_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>