main/default/objects/Project_Task__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>TextArea</type>
</CustomField>