main/default/objects/Project_Task__c/fields/Previous_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>