main/default/objects/Project_Task__c/fields/Priority_bug__c.field-meta.xml
<CustomField>
    <fullName>Priority_bug__c</fullName>
    <formula>IF( ISPICKVAL(Severity__c, &apos;4 - Critical&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;4 - Extensive/Widespread (100% of Users)&apos;), &apos;1 - Critical&apos;,
IF(
 OR(
  (ISPICKVAL(Severity__c, &apos;3 - High&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;4 - Extensive/Widespread (100% of Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;3 - High&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;3 - Significant/Large (50% of Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;2 - Normal&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;4 - Extensive/Widespread (100% of Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;4 - Critical&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;3 - Significant/Large (50% of Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;4 - Critical&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;2 - Moderate/Limited (1 Team)&apos;))
 ),
 &apos;2 - High&apos;,
IF(
 OR(
  (ISPICKVAL(Severity__c, &apos;4 - Critical&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;1 - Minor/Localized (1-5 Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;3 - High&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;2 - Moderate/Limited (1 Team)&apos;)),
  (ISPICKVAL(Severity__c, &apos;2 - Normal&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;3 - Significant/Large (50% of Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;1 - Low&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;4 - Extensive/Widespread (100% of Users)&apos;))
 ), 
 &apos;3 - Medium&apos;,
IF(
 OR(
  (ISPICKVAL(Severity__c, &apos;3 - High&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;1 - Minor/Localized (1-5 Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;2 - Normal&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;1 - Minor/Localized (1-5 Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;2 - Normal&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;2 - Moderate/Limited (1 Team)&apos;)),
  (ISPICKVAL(Severity__c, &apos;1 - Low&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;3 - Significant/Large (50% of Users)&apos;)),
  (ISPICKVAL(Severity__c, &apos;1 - Low&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;2 - Moderate/Limited (1 Team)&apos;)),
  (ISPICKVAL(Severity__c, &apos;1 - Low&apos;) &amp;&amp;  ISPICKVAL(Impact__c, &apos;1 - Minor/Localized (1-5 Users)&apos;))
 ),
 &apos;4 - Low&apos;,
&apos;&apos;))))</formula>
    <label>Bug Priority</label>
    <type>Text</type>
</CustomField>