main/default/objects/Project_Task__c/fields/PROD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>PROD_Due_Date__c</fullName>
    <label>PROD Due Date</label>
    <type>Date</type>
</CustomField>