main/default/objects/Project_Task__c/fields/Prod_Validation_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Prod_Validation_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Validation Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Tasks (Prod Validation Assigned To)</relationshipLabel>
    <relationshipName>Project_Tasks4</relationshipName>
    <type>Lookup</type>
</CustomField>