main/default/objects/Project_Task__c/fields/Project_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Project_Help_Text__c</fullName>
    <defaultValue>&apos;Project will be automatically populated upon saving if related to a Workplan.&apos;</defaultValue>
    <label>Project Help Text</label>
    <type>TextArea</type>
</CustomField>