main/default/objects/Project_Task__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipName>Project_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>