main/default/objects/Project_Task__c/fields/Project_Task_Number_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Number_Help_Text__c</fullName>
    <defaultValue>&apos;Enter any value for Project Task Number field. Next available number will be automatically populated upon saving the record.&apos;</defaultValue>
    <label>Project Task Number Help Text</label>
    <type>TextArea</type>
</CustomField>