main/default/objects/Project_Task__c/fields/Proposed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Hours__c</fullName>
    <label>Proposed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>