main/default/objects/Project_Task__c/fields/ProProd_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>ProProd_Due_Day__c</fullName>
    <formula>PROD_Due_Date__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProProd Due Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>