main/default/objects/Project_Task__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>