main/default/objects/Project_Task__c/fields/QA_Task__c.field-meta.xml
<CustomField>
    <fullName>QA_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks (QA Task)</relationshipLabel>
    <relationshipName>QA_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>