main/default/objects/Project_Task__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <inlineHelpText>How many people will this feature affect within a given time? e.g. 20, 100, 500</inlineHelpText>
    <label>Reach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>