main/default/objects/Project_Task__c/fields/Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>Reference_Link__c</fullName>
    <inlineHelpText>Technical Review Reference Link</inlineHelpText>
    <label>Reference Link</label>
    <type>Url</type>
</CustomField>