main/default/objects/Project_Task__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <label>References</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>