main/default/objects/Project_Task__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>