main/default/objects/Project_Task__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <formula>Source_Story__r.Requested_By__r.FirstName &amp; &quot; &quot; &amp; Source_Story__r.Requested_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Name</label>
    <type>Text</type>
</CustomField>