main/default/objects/Project_Task__c/fields/Requirements_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Addressed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirements Addressed</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Project Tasks (Requirements Addressed)</relationshipLabel>
    <relationshipName>Requirements_Addressed</relationshipName>
    <type>Lookup</type>
</CustomField>