main/default/objects/Project_Task__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project_Tasks3</relationshipName>
    <type>Lookup</type>
</CustomField>