main/default/objects/Project_Task__c/fields/Rework__c.field-meta.xml
<CustomField>
    <fullName>Rework__c</fullName>
    <label>Rework</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>